[package]
name = "busrzi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.9", features = ["tracing"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tokio = { version = "1.43", features = ["full"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"

[profile.release]
opt-level = 'z'     # Enable all optimizations
lto = 'fat'         # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary